--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,8 +30,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
-
+  d_chart: ^2.2.11
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
